[package]
name = "lasttest"
version = "0.1.0"
authors = ["Stefan Schindler <dns2utf8@estada.ch>"]

[dependencies]
threadpool = "1.1"
#threadpool = { git="https://github.com/dns2utf8/rust-threadpool.git", branch="atomic" }
rand = "0.3"
#random = "0.9"
crossbeam = "0.2"
num_cpus = "1.0"
docopt = "0.6"
rustc-serialize = "0.3"
