[package]
name = "lasttest"
version = "0.1.0"
authors = ["Stefan Schindler <dns2utf8@estada.ch>"]

[dependencies]
threadpool = "1.7"
#threadpool = { git="https://github.com/dns2utf8/rust-threadpool.git", branch="atomic" }
rand = "0.3"
#random = "0.9"
crossbeam = "0.3"
num_cpus = "1.0"
docopt = "1"
serde = { version = "1", features = ["derive"] }
#rustc-serialize = "0.3"


#mpi = { git = "https://github.com/bsteinb/rsmpi.git", tag = "0.4.0" }
